--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -31,4 +31,6 @@
         <item>Zebra</item>
     </string-array>
 
+    <string name="choose_language_prompt">Please choose a langugage</string>
+    
 </resources>
