--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Animal Flash Cards</string>
+    <string name="app_name">Cartes mémoire des animaux</string>
     <string name="action_settings">Settings</string>
     
     <string-array name="animal_names">
@@ -31,4 +31,6 @@
         <item>Le zèbre</item>
     </string-array>
 
+    <string name="choose_language_prompt">S\'il vous plaît choisir une langue</string>
+    
 </resources>
