--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,5 +30,7 @@
         <item>Yak</item>
         <item>Zebra</item>
     </string-array>
+    
+    <string name="choose_language_prompt">Please choose a langugage</string>
 
 </resources>
